# Quantum-Chemistry-Eigensolver

./: README.md  pyproject.toml
h2_data/: h2_mo_integrals_d_0300.npz  h2_mo_integrals_d_0350.npz  h2_mo_integrals_d_0400.npz  h2_mo_integrals_d_0450.npz  h2_mo_integrals_d_0500.npz  h2_mo_integrals_d_0550.npz  h2_mo_integrals_d_0600.npz  h2_mo_integrals_d_0650.npz  h2_mo_integrals_d_0700.npz  h2_mo_integrals_d_0750.npz  h2_mo_integrals_d_0800.npz  h2_mo_integrals_d_0850.npz  h2_mo_integrals_d_0900.npz  h2_mo_integrals_d_0950.npz  h2_mo_integrals_d_1000.npz  h2_mo_integrals_d_1050.npz  h2_mo_integrals_d_1100.npz  h2_mo_integrals_d_1150.npz  h2_mo_integrals_d_1200.npz  h2_mo_integrals_d_1250.npz  h2_mo_integrals_d_1300.npz  h2_mo_integrals_d_1350.npz  h2_mo_integrals_d_1400.npz  h2_mo_integrals_d_1450.npz  h2_mo_integrals_d_1500.npz  h2_mo_integrals_d_1550.npz  h2_mo_integrals_d_1600.npz  h2_mo_integrals_d_1650.npz  h2_mo_integrals_d_1700.npz  h2_mo_integrals_d_1750.npz  h2_mo_integrals_d_1800.npz  h2_mo_integrals_d_1850.npz  h2_mo_integrals_d_1900.npz  h2_mo_integrals_d_1950.npz
installation/: README.md
quantum_chemistry/: __init__.py  estimation.py  mapping.py  pauli.py  vqe.py
quantum_chemistry/molecule/: h2_molecule.py  hartree_fock.py  linalg.py  molecular_integrals.py
resources/: guided_tutorial_1.ipynb  guided_tutorial_2.ipynb
usage/: generare_h2_integrals.py  molecule_dissociation_curve_h2.py
visualization/: h2_molecular_orbitals.py  masterVisualization.py  vqe_energy_curves.py
visualization/excess/: test_vqe_curves.py
